--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^3.26.0",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
+    "copy-to-clipboard": "^3.2.0",
     "customize-cra": "^0.9.1",
     "react": "^16.4.1",
     "react-app-rewired": "^2.1.5",
